# api/m2m-serves-appserver/m2m_dhx.pb.go
@@ -34,6 +34,9 @@ type DHXGetLastMiningRequest struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
+
+	// organization id. If specified return details for the given organization and the council it chairs
+	OrgId int64 `protobuf:"varint,1,opt,name=org_id,json=orgId,proto3" json:"org_id,omitempty"`
 }
 
 func (x *DHXGetLastMiningRequest) Reset() {
@@ -68,6 +71,13 @@ func (*DHXGetLastMiningRequest) Descriptor() ([]byte, []int) {
 	return file_m2m_dhx_proto_rawDescGZIP(), []int{0}
 }
 
+func (x *DHXGetLastMiningRequest) GetOrgId() int64 {
+	if x != nil {
+		return x.OrgId
+	}
+	return 0
+}
+
 type DHXGetLastMiningResponse struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
@@ -79,6 +89,15 @@ type DHXGetLastMiningResponse struct {
 	MiningPower string `protobuf:"bytes,2,opt,name=mining_power,json=miningPower,proto3" json:"mining_power,omitempty"`
 	// the amount of DHX that supernode has received
 	DhxAmount string `protobuf:"bytes,3,opt,name=dhx_amount,json=dhxAmount,proto3" json:"dhx_amount,omitempty"`
+	// organization id, mining power and revenue (if requested)
+	OrgId          int64  `protobuf:"varint,4,opt,name=org_id,json=orgId,proto3" json:"org_id,omitempty"`
+	OrgMiningPower string `protobuf:"bytes,5,opt,name=org_mining_power,json=orgMiningPower,proto3" json:"org_mining_power,omitempty"`
+	OrgDhxAmount   string `protobuf:"bytes,6,opt,name=org_dhx_amount,json=orgDhxAmount,proto3" json:"org_dhx_amount,omitempty"`
+	// council id, name, mining power and revenue (if the org chairs one)
+	CouncilId          int64  `protobuf:"varint,7,opt,name=council_id,json=councilId,proto3" json:"council_id,omitempty"`
+	CouncilName        string `protobuf:"bytes,8,opt,name=council_name,json=councilName,proto3" json:"council_name,omitempty"`
+	CouncilMiningPower string `protobuf:"bytes,9,opt,name=council_mining_power,json=councilMiningPower,proto3" json:"council_mining_power,omitempty"`
+	CouncilDhxAmount   string `protobuf:"bytes,10,opt,name=council_dhx_amount,json=councilDhxAmount,proto3" json:"council_dhx_amount,omitempty"`
 }
 
 func (x *DHXGetLastMiningResponse) Reset() {
@@ -130,6 +149,55 @@ func (x *DHXGetLastMiningResponse) GetMiningPower() string {
 func (x *DHXGetLastMiningResponse) GetDhxAmount() string {
 	if x != nil {
 		return x.DhxAmount
+	}
+	return ""
+}
+
+func (x *DHXGetLastMiningResponse) GetOrgId() int64 {
+	if x != nil {
+		return x.OrgId
+	}
+	return 0
+}
+
+func (x *DHXGetLastMiningResponse) GetOrgMiningPower() string {
+	if x != nil {
+		return x.OrgMiningPower
+	}
+	return ""
+}
+
+func (x *DHXGetLastMiningResponse) GetOrgDhxAmount() string {
+	if x != nil {
+		return x.OrgDhxAmount
+	}
+	return ""
+}
+
+func (x *DHXGetLastMiningResponse) GetCouncilId() int64 {
+	if x != nil {
+		return x.CouncilId
+	}
+	return 0
+}
+
+func (x *DHXGetLastMiningResponse) GetCouncilName() string {
+	if x != nil {
+		return x.CouncilName
+	}
+	return ""
+}
+
+func (x *DHXGetLastMiningResponse) GetCouncilMiningPower() string {
+	if x != nil {
+		return x.CouncilMiningPower
+	}
+	return ""
+}
+
+func (x *DHXGetLastMiningResponse) GetCouncilDhxAmount() string {
+	if x != nil {
+		return x.CouncilDhxAmount
 	}
 	return ""
 }
@@ -836,17 +904,35 @@ var file_m2m_dhx_proto_rawDesc = []byte{
 	0x14, 0x6d, 0x32, 0x6d, 0x5f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x73, 0x5f, 0x61, 0x70, 0x70, 0x73,
 	0x65, 0x72, 0x76, 0x65, 0x72, 0x1a, 0x1f, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x70, 0x72,
 	0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x74, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70,
-	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x19, 0x0a, 0x17, 0x44, 0x48, 0x58, 0x47, 0x65, 0x74,
+	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x30, 0x0a, 0x17, 0x44, 0x48, 0x58, 0x47, 0x65, 0x74,
 	0x4c, 0x61, 0x73, 0x74, 0x4d, 0x69, 0x6e, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
-	0x74, 0x22, 0x8c, 0x01, 0x0a, 0x18, 0x44, 0x48, 0x58, 0x47, 0x65, 0x74, 0x4c, 0x61, 0x73, 0x74,
-	0x4d, 0x69, 0x6e, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x2e,
-	0x0a, 0x04, 0x64, 0x61, 0x74, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67,
-	0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54,
-	0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x04, 0x64, 0x61, 0x74, 0x65, 0x12, 0x21,
-	0x0a, 0x0c, 0x6d, 0x69, 0x6e, 0x69, 0x6e, 0x67, 0x5f, 0x70, 0x6f, 0x77, 0x65, 0x72, 0x18, 0x02,
-	0x20, 0x01, 0x28, 0x09, 0x52, 0x0b, 0x6d, 0x69, 0x6e, 0x69, 0x6e, 0x67, 0x50, 0x6f, 0x77, 0x65,
-	0x72, 0x12, 0x1d, 0x0a, 0x0a, 0x64, 0x68, 0x78, 0x5f, 0x61, 0x6d, 0x6f, 0x75, 0x6e, 0x74, 0x18,
-	0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x64, 0x68, 0x78, 0x41, 0x6d, 0x6f, 0x75, 0x6e, 0x74,
+	0x74, 0x12, 0x15, 0x0a, 0x06, 0x6f, 0x72, 0x67, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28,
+	0x03, 0x52, 0x05, 0x6f, 0x72, 0x67, 0x49, 0x64, 0x22, 0x95, 0x03, 0x0a, 0x18, 0x44, 0x48, 0x58,
+	0x47, 0x65, 0x74, 0x4c, 0x61, 0x73, 0x74, 0x4d, 0x69, 0x6e, 0x69, 0x6e, 0x67, 0x52, 0x65, 0x73,
+	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x2e, 0x0a, 0x04, 0x64, 0x61, 0x74, 0x65, 0x18, 0x01, 0x20,
+	0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f,
+	0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52,
+	0x04, 0x64, 0x61, 0x74, 0x65, 0x12, 0x21, 0x0a, 0x0c, 0x6d, 0x69, 0x6e, 0x69, 0x6e, 0x67, 0x5f,
+	0x70, 0x6f, 0x77, 0x65, 0x72, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0b, 0x6d, 0x69, 0x6e,
+	0x69, 0x6e, 0x67, 0x50, 0x6f, 0x77, 0x65, 0x72, 0x12, 0x1d, 0x0a, 0x0a, 0x64, 0x68, 0x78, 0x5f,
+	0x61, 0x6d, 0x6f, 0x75, 0x6e, 0x74, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x64, 0x68,
+	0x78, 0x41, 0x6d, 0x6f, 0x75, 0x6e, 0x74, 0x12, 0x15, 0x0a, 0x06, 0x6f, 0x72, 0x67, 0x5f, 0x69,
+	0x64, 0x18, 0x04, 0x20, 0x01, 0x28, 0x03, 0x52, 0x05, 0x6f, 0x72, 0x67, 0x49, 0x64, 0x12, 0x28,
+	0x0a, 0x10, 0x6f, 0x72, 0x67, 0x5f, 0x6d, 0x69, 0x6e, 0x69, 0x6e, 0x67, 0x5f, 0x70, 0x6f, 0x77,
+	0x65, 0x72, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0e, 0x6f, 0x72, 0x67, 0x4d, 0x69, 0x6e,
+	0x69, 0x6e, 0x67, 0x50, 0x6f, 0x77, 0x65, 0x72, 0x12, 0x24, 0x0a, 0x0e, 0x6f, 0x72, 0x67, 0x5f,
+	0x64, 0x68, 0x78, 0x5f, 0x61, 0x6d, 0x6f, 0x75, 0x6e, 0x74, 0x18, 0x06, 0x20, 0x01, 0x28, 0x09,
+	0x52, 0x0c, 0x6f, 0x72, 0x67, 0x44, 0x68, 0x78, 0x41, 0x6d, 0x6f, 0x75, 0x6e, 0x74, 0x12, 0x1d,
+	0x0a, 0x0a, 0x63, 0x6f, 0x75, 0x6e, 0x63, 0x69, 0x6c, 0x5f, 0x69, 0x64, 0x18, 0x07, 0x20, 0x01,
+	0x28, 0x03, 0x52, 0x09, 0x63, 0x6f, 0x75, 0x6e, 0x63, 0x69, 0x6c, 0x49, 0x64, 0x12, 0x21, 0x0a,
+	0x0c, 0x63, 0x6f, 0x75, 0x6e, 0x63, 0x69, 0x6c, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x08, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x0b, 0x63, 0x6f, 0x75, 0x6e, 0x63, 0x69, 0x6c, 0x4e, 0x61, 0x6d, 0x65,
+	0x12, 0x30, 0x0a, 0x14, 0x63, 0x6f, 0x75, 0x6e, 0x63, 0x69, 0x6c, 0x5f, 0x6d, 0x69, 0x6e, 0x69,
+	0x6e, 0x67, 0x5f, 0x70, 0x6f, 0x77, 0x65, 0x72, 0x18, 0x09, 0x20, 0x01, 0x28, 0x09, 0x52, 0x12,
+	0x63, 0x6f, 0x75, 0x6e, 0x63, 0x69, 0x6c, 0x4d, 0x69, 0x6e, 0x69, 0x6e, 0x67, 0x50, 0x6f, 0x77,
+	0x65, 0x72, 0x12, 0x2c, 0x0a, 0x12, 0x63, 0x6f, 0x75, 0x6e, 0x63, 0x69, 0x6c, 0x5f, 0x64, 0x68,
+	0x78, 0x5f, 0x61, 0x6d, 0x6f, 0x75, 0x6e, 0x74, 0x18, 0x0a, 0x20, 0x01, 0x28, 0x09, 0x52, 0x10,
+	0x63, 0x6f, 0x75, 0x6e, 0x63, 0x69, 0x6c, 0x44, 0x68, 0x78, 0x41, 0x6d, 0x6f, 0x75, 0x6e, 0x74,
 	0x22, 0xb8, 0x01, 0x0a, 0x15, 0x44, 0x48, 0x58, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x53, 0x74,
 	0x61, 0x6b, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x1d, 0x0a, 0x0a, 0x63, 0x6f,
 	0x75, 0x6e, 0x63, 0x69, 0x6c, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x03, 0x52, 0x09,
